--- a/src/scss/components/_resource.scss
+++ b/src/scss/components/_resource.scss
@@ -191,27 +191,6 @@
         }
       }
 
-      .heatmap-editable {
-        cursor: ns-resize;
-        border-radius: 4px;
-
-        &:hover {
-          box-shadow: 0 0 0 1px currentColor;
-        }
-      }
-
-      .heatmap-inline-input {
-        width: 2.4em;
-        height: auto;
-        padding: 0;
-        border: none;
-        background: transparent;
-        color: inherit;
-        font: inherit;
-        font-weight: inherit;
-        text-align: center;
-      }
-
       .heatmap-slash {
         font-weight: 800;
         opacity: 0.5;
